--- a/app/globals.css
+++ b/app/globals.css
@@ -43,3 +43,12 @@
       }
     }
   }
+
+/* .with-line {
+  color: white;
+}
+
+.with-line::before, .with-line::after {
+  content:"\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0";
+  text-decoration: line-through;
+} */
